--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -17,6 +17,26 @@
 	});
 </script>
 
+<script type="text/javascript">
+    var checkbox = document.getElementById('checkbox');
+    var img = <img src="~/Content/img/Student Market/market_mockup2.png" />;
+    var img1 = <img src="~/Content/img/Student Market/market_mockup3.png" />;
+    var img2 = <img src="~/Content/img/Student Market/market_mockup4.png" />;
+    var img3 = <img src="~/Content/img/Student Market/market_mockup5.png" />;
+
+    checkbox.onclick = function () {
+        if (checkbox.src == img) {
+            checkbox.src = img1;
+        } else if (checkbox.src == img1) {
+            checkbox.src = img2;
+        } else if (checkbox.src == img2) {
+            checkbox.src = img3;
+        } else {
+            checkbox.src = img3;
+        }
+    }
+</script>
+
 <div class="background">
     <div class="row text-center">
         <h1 class="student-header" align="center">Marketplace</h1>
@@ -35,7 +55,7 @@
                 <div class="boxed" align="center">
                     <font size="10">Points: 150</font>
                 </div>
-                <img src="~/Content/img/Student Market/market_mockup2.png" width="1000" class="img-responsive" id="wireframe-student" />
+                <img src="~/Content/img/Student Market/market_mockup2.png" width="1000" class="img-responsive" id="checkbox" />
 
                 <div class="col-md-4">
 
