Updated horz scroll, site-wide colors

--- a/5051/Views/Shared/_Layout.cshtml
+++ b/5051/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
     <footer>
         <div class="footer">
 
-            <div style="background-color: #9b7b5f;">
+            <div style="background-color: #5f5851;">
 
                     <!-- Grid row-->
                     <div class="row">
