--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -10,7 +10,7 @@
     background-size: cover;
     position: relative;
     width: 100%;
-    padding-top: 50px;
+    padding-top: 2`0px;
     min-height: 800px;
     margin: 0 auto;
     z-index: 1;
@@ -129,7 +129,7 @@
     }
 
 body {
-    background: #666666;
+    background: #857c73;
     padding-bottom: 20px;
     padding-top: 80px;
     font-family: 'Ubuntu', sans-serif;
@@ -144,13 +144,14 @@ h1 {
 
 .scroll-bar-horz {
     position: absolute;
-    border: none; 
-    width: 1400px; 
-    height: 700px; 
-    overflow-y: hidden; 
+    border: none;
+    width: 100%;
+    height: 700px;
+    overflow-y: hidden;
     overflow-x: scroll;
-    margin: 50px;
-    margin-left:250px;
+    margin: 10px;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 
 
@@ -277,7 +278,7 @@ a.navbar-brand {
 }
 
 .navbar-default {
-    background-color: #add3d9;
+    background-color: #85bad7;
     font-size: 20px;
     color: white;
 }
@@ -425,17 +426,12 @@ a.navbar-brand {
     text-align: center;
 }
 
-.banner hr {
-    border-color: #F05F40;
-    border-width: 3px;
-    max-width: 200px;
-}
 
 .intro {
     padding-top: 50px;
     padding-bottom: 50px;
     width: 100%;
-    background-color: #d7d8d9;
+    background-color: #F5FFFA;
     margin: auto;
     height: auto;
 }
@@ -444,8 +440,8 @@ a.navbar-brand {
     background: url(../Content/img/adminBackground.png);
     width: 100%;
     margin: auto;
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-top: 60px;
+    padding-bottom: 60px;
     height: auto;
 }
 
