--- a/5051/Views/Portal/Login.cshtml
+++ b/5051/Views/Portal/Login.cshtml
@@ -13,26 +13,25 @@
                     <h1> Welcome Back to Nova Town! </h1>
 
                     <form action="/" method="post">
+                        
                         <div class="cols-md-6 col-md-offset-3 text-center">
-                        <div class="field-wrap">
-                            <label>
-                                Email Address<span class="req">*</span>
-                            </label>
-                            <input type="email" required autocomplete="off" />
-                        </div>
-
-                        <div class="field-wrap">
-                            <label>
-                                Password<span class="req">*</span>
-                            </label>
-                            <input type="password" required autocomplete="off" />
-                        </div>
-
+                            <div class="field-wrap">
+                                <label>
+                                    Email Address<span class="req">*</span>
+                                </label>
+                                <input type="email" required autocomplete="off" />
                             </div>
+                            <div class="field-wrap">
+                                <label>
+                                    Password<span class="req">*</span>
+                                </label>
+                                <input type="password" required autocomplete="off" />
+                            </div>
+                        </div>
 
                         <p class="forgot"><a href="#">Forgot Password?</a></p>
-
-                        <a href="~/Portal/Index" class="button button-block" role="button">Log In</a>
+                    
+                        <a href="~/Portal/Index" class="button button-block">Log In</a>
 
                     </form>
 
