Update market code

--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -18,7 +18,7 @@
 </script>
 
 <script type="text/javascript">
-    var checkbox = document.getElementById('checkbox');
+    var checkbox = document.getElementById('wireframe-student');
     var img = <img src="~/Content/img/Student Market/market_mockup2.png" />;
     var img1 = <img src="~/Content/img/Student Market/market_mockup3.png" />;
     var img2 = <img src="~/Content/img/Student Market/market_mockup4.png" />;
@@ -55,7 +55,7 @@
                 <div class="boxed" align="center">
                     <font size="10">Points: 150</font>
                 </div>
-                <img src="~/Content/img/Student Market/market_mockup2.png" width="1000" class="img-responsive" id="checkbox" />
+                <img id="wireframe-student" src="~/Content/img/Student Market/market_mockup2.png" width="1000" class="img-responsive"  />
 
                 <div class="col-md-4">
 
