--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -140,6 +140,7 @@ h1 {
     font-family: Catamaran;
     font-size: 60px;
     font-weight: 800;
+    z-index: 0;
 }
 
 .scroll-bar-horz {
@@ -211,6 +212,15 @@ textarea {
 }
 
 #wireframe-student {
+    position: relative;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+#market-pic {
     position: relative;
     margin-top: 100px;
     margin-bottom: 100px;
