--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -28,9 +28,11 @@
     z-index: 1;
 }
 
-.background3 {
+/******************ADMIN SECTION*****************************************************/
+#background3 {
     background-image: url("../Content/img/nightimeBackground.png");
     background-position: center bottom;
+    background-repeat: repeat;
     background-size: cover;
     position: relative;
     width: 100%;
@@ -42,19 +44,25 @@
 }
 
 #Pgtitle {
+    font-size: 25px;
     color: #fff375;
     margin-top: -20px;
     padding-left: 20px;
     padding-bottom: 20px;
-    
 }
+
+#mainMenu {
+    margin-top: -20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+}
+
 
 #adminPane {
     border-radius: 25px;
     background-color: #f9f3ae;
     padding: 30px 30px;
     opacity: 0.90;
-   
 }
 
 #adminLPane {
@@ -63,15 +71,14 @@
     padding: 30px 30px;
     opacity: 0.90;
     min-height: 500px;
-    
 }
 
-#adminLPane:hover {
+    #adminLPane:hover {
         box-shadow: 0px 0px 10px #fff;
         border-style: solid;
         border-width: thick;
         border-color: #ffffff;
-}
+    }
 
 #adminRPane {
     border-radius: 25px;
@@ -85,7 +92,6 @@
 
 #adminInnerLPane {
     margin: auto;
-   
 }
 
 
@@ -94,12 +100,12 @@
     width: 143px;
 }
 
-#fitInfoText{
+#fitInfoText {
     padding-left: 0px;
 }
 
-#fitEditNameText{
-    overflow:hidden
+#fitEditNameText {
+    overflow: hidden
 }
 
 
@@ -111,6 +117,8 @@
     padding-top: 70px;
     overflow: auto;
 }
+
+/****************************************************************************************/
 
 .road {
     background: rgb(138,138,138);
