--- a/5051/Views/Admin/Manage.cshtml
+++ b/5051/Views/Admin/Manage.cshtml
@@ -13,21 +13,6 @@ ViewBag.Title = "Reports";
             window.print();
         }
 
-        //Equalize left and right panes
-        $(function () {
-            var maxHeight = 0;
-            $AllCols = $("[id=adminPane]");
-            $AllCols.each(function () {
-
-                var thisHeight = $(this).height();
-                if (thisHeight > maxHeight) {
-                    maxHeight = thisHeight;
-                }
-
-            });
-
-            $AllCols.height(maxHeight);
-        });
 
     </script>
 
@@ -36,7 +21,6 @@ ViewBag.Title = "Reports";
             Manage Students
         </div>
         <div id="mainMenu" class="col-md-9 pull-right">
-
             @Html.ActionLink("Main Menu", "Index", "Admin", null, new { @class = "btn btn-primary" })
             <a href="#" class="btn btn-danger" role="button" onclick="Print()">Print</a>
 
@@ -113,7 +97,7 @@ ViewBag.Title = "Reports";
                 </script>
 
 
-                    <div id="adminLPane" class="col-md-4">
+                <div id="adminLPane" class="col-md-4 pull-left">
 
                         @{
                             if (Model.Student != null)
@@ -290,8 +274,8 @@ ViewBag.Title = "Reports";
                     </div>
 
 
-                                    <div id="adminRPane" class="col-md-7">
-                                        <div class="row">
+                    <div id="adminRPane" class="col-md-7">
+                           <div class="row">
                                             <!--Menu bar above the report-->
                                             <span>
                                                 <label for="frDate">From date:</label>
@@ -355,7 +339,7 @@ ViewBag.Title = "Reports";
                                     </div>
 
 
-                            }
+            }
         }
     </div>
 </div>
