--- a/5051/Views/Portal/AdminLogin.cshtml
+++ b/5051/Views/Portal/AdminLogin.cshtml
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
 
-<div class="background3">
+<div id="background3">
     <div class="row text-center">
         <div class="form">
 
