--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -30,10 +30,10 @@ function openTab(cityName) {
             <div id="Month" class="w3-container city">
                 <div class="span5">
                         <h3>Month</h3>
-                    <div style="position: relative;"><img src="~/Content/img/StudentCalendar1.png" width="1000" class="img-responsive" id="wireframe-student" /></div>
+                    <div></div>
                 </div>
             </div>
-
+            <div class="student-report"> <img src="~/Content/img/StudentCalendar1.png" width="1000" class="img-responsive" id="wireframe-student" /></div>
             <div id="Year" class="w3-container city" style="display:none">
                 <h3>Year</h3>
                 <p>Paris is the capital of France.</p>
