--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -485,14 +485,22 @@ a.navbar-brand {
 /*Student Report section*/
 
 .span5 {
-    margin-top: 20px;
-    padding-left: 20px;
-    height: auto;
-    width: auto;
-    position: center;
-    background: #fff;
-    opacity: 0.7;
+    height: 600px;
+    width: 1000px;
+    position:center;
     display: inline-block;
+    background-color: #fff;
+    opacity: 0.7;
+    padding: 10px;
+    margin-top: 20px;
 }
+
+.student-report{
+    position: relative;
+    top: -580px;
+    padding-left: 25px;
+    margin-bottom: -580px;
+}
+
 
 /*********** Homepage CSS   END ******************/
