--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -214,64 +214,6 @@ textarea {
     float: none;
 }
 
-#studentnavicons {
-
-    position: absolute;
-    left: 50%;
-    top: 15%;
-    font-size: calc(1.0vw + 1.0vh);
-    transform: translate(-50%);
-}
-
-#studentnavicons a {
-    font-size: calc(2vw + 2vh);
-    margin-left: 10px;
-}
-
-.student-text-medium {
-    margin-top: 5%;
-    font-size: 3.5vh;
-}
-
-.student-text-small {
-    margin-top: 3%;
-    font-size: 2.0vh;
-}
-
-#wireframe-student {
-    position: relative;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
-}
-
-#market-pic {
-    position: relative;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
-}
-
-.shop-scroll {
-    display: inline;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-
-#studentnaviconstext {
-    position: relative;
-    text-align:right;
-    margin-right: 20px;
-    top:-700px;
-    font-size: 16px;
-}
-
 .container-full {
     width:100%;
     margin: 0 auto;
@@ -343,7 +285,7 @@ a.navbar-brand {
     color: #fff;
 }
 
-/*        Kiosk Page           */
+/*----------------------Kiosk Page------------------------*/
 
 #clock {
     display: flex;
@@ -488,8 +430,60 @@ a.navbar-brand {
     padding-bottom: 60px;
     height: auto;
 }
+/*------------------Homepage CSS END--------------------------------*/
 
-/*Student Report section*/
+/*------------------Student Report section--------------------------*/
+#student-icons a {
+    color:#fff;
+}
+
+#studentnavicons {
+    position: absolute;
+    left: 50%;
+    top: 15%;
+    font-size: calc(1.0vw + 1.0vh);
+    transform: translate(-50%);
+}
+
+    #studentnavicons a {
+        font-size: calc(2vw + 2vh);
+        margin-left: 10px;
+    }
+
+.student-text-medium {
+    margin-top: 5%;
+    font-size: 3.5vh;
+}
+
+.student-text-small {
+    margin-top: 3%;
+    font-size: 2.0vh;
+}
+
+#wireframe-student {
+    position: relative;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+#market-pic {
+    position: relative;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
+.shop-scroll {
+    display: inline;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 
 .span5 {
     height: 600px;
