--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -8,7 +8,6 @@
     background-image: url("../Content/img/sunset.png");
     background-position: center bottom;
     background-size: cover;
-    position: relative;
     width: 100%;
     padding-top: 50px;
     min-height: 800px;
@@ -19,7 +18,6 @@
     background-image: url("../Content/img/daytimeBackground.png");
     background-position: center bottom;
     background-size: cover;
-    position: relative;
     width: 100%;
     min-height: 800px;
     padding-top: 50px;
@@ -32,12 +30,10 @@
     background-position: center bottom;
     background-repeat: repeat;
     background-size: cover;
-    position: relative;
     width: 100%;
     min-height: 800px;
     padding-top: 50px;
     margin: 0 auto;
-    opacity: 0.75;
 }
 
 #Pgtitle {
@@ -257,6 +253,7 @@ a.navbar-brand {
     color: white;
     background-color: transparent;
     margin-bottom: 0px;
+    z-index: 999;
 }
 
 .navbar-custom {
@@ -264,6 +261,7 @@ a.navbar-brand {
     margin-bottom: 0px;
     border: 0px;
     font-size: 20px;
+    z-index: 999;
 }
 
 .navbar-custom .navbar-nav > li > a {
