--- a/5051/Views/Student/Avatar.cshtml
+++ b/5051/Views/Student/Avatar.cshtml
@@ -11,11 +11,11 @@
         <h1 class="student-header" align="center">Avatar name</h1>
 
         <div id="studentnavicons">
-            <a id="student_icons" href="~/Student/Default" title="Store"><i class="fas fa-store-alt"></i></a>
-            <a id="student_icons" href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
-            <a id="student_icons" href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
-            <a id="student_icons" href="~/Student/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
-            <a id="student_icons" href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
+            <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt"></i></a>
+            <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
+            <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
+            <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
+            <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
 </div>
         <img src="~/Content/img/AvatarMockup_final.png" width="800" class="img-responsive" id="wireframe-student" />
     </div>
