--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -30,11 +30,11 @@
     <div class="row text-center">
         <h1 class="student-header" align="center">Marketplace</h1>
         <div id="studentnavicons">
-            <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt" style="color:#7a553b"></i></a>
-            <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs" style="color:#7a553b"></i></a>
-            <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart" style="color:#7a553b"></i></a>
-            <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user" style="color:#7a553b"></i></a>
-            <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt" style="color:#7a553b"></i></a>
+            <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt"></i></a>
+            <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
+            <a href="~/Student/Market" title="Marketplace"><i class="fas fa-shopping-cart"></i></a>
+            <a href="~/Student/Avatar" title="Avatar"><i class="fas fa-user"></i></a>
+            <a href="~/Portal/Logout" title="Logout"><i class="fas fa-sign-out-alt"></i></a>
         </div>
     </div>
 
