--- a/5051/Views/Admin/Manage.cshtml
+++ b/5051/Views/Admin/Manage.cshtml
@@ -14,10 +14,7 @@ ViewBag.Title = "Reports";
                 window.print();
             }
 
-
         </script>
-
-
 
         <div class="col-md-12">
             <div id="Pgtitle" class="col-md-3">
@@ -29,9 +26,6 @@ ViewBag.Title = "Reports";
 
             </div>
         </div>
-
-
-
 
         <br />
 
@@ -99,7 +93,6 @@ ViewBag.Title = "Reports";
 
                     }
             </script>
-
 
             <div id="adminLPane" class="col-md-4 hoverGlow">
 
@@ -217,7 +210,7 @@ ViewBag.Title = "Reports";
                                 <div id="fitTitleText" class="col-md-6 text-left">
                                     @Html.DisplayNameFor(i => item.AvatarDescription)
                                 </div>
-                                <div id="fitInfoText" class="col-md-6 text-left">
+                                <div id="fitInfoText" class="col-md-6">
                                     @Html.DisplayFor(i => item.AvatarDescription)
                                 </div>
                             </div>
@@ -260,9 +253,9 @@ ViewBag.Title = "Reports";
                         <div class="listcenter">
                             @foreach (var item in Model.StudentList)
                                     {
-                                    <div class="col-md-6 text-center">
+                                    <div id="li" class="col-md-6 text-center">
                                         <a id="@item.Id" href="~/Admin/Manage/@item.Id">
-                                            <img src="~/Content/img/@item.AvatarUri" width="50" height="50" />
+                                            <img src="~/Content/img/@item.AvatarUri" class="image-responsive" />
                                             <br />
                                             <span>
                                                 @item.Name
