--- a/5051/Views/Shared/_Layout.cshtml
+++ b/5051/Views/Shared/_Layout.cshtml
@@ -27,15 +27,14 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            @Html.ActionLink("Nova Town", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                         </div>
                         <div class="navbar-collapse collapse col-md-10 col-md-offset-5">
-                            <ul class="nav navbar-nav navbar-right">
+                            <ul class="nav navbar-nav">
                                 <li>@Html.ActionLink("Student", "Login", "Portal")</li>
                                 <li>@Html.ActionLink("Admin", "AdminLogin", "Portal")</li>
                                 <li>@Html.ActionLink("Kiosk Mode", "Landing", "Kiosk")</li>
                             </ul>
-                            @*@Html.Partial("_LoginPartial")*@
+                            @Html.ActionLink("Nova Town", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
                         </div>
                     </div>
             </nav>
