--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -4,16 +4,6 @@
     padding-top: 10px;
 }
 
-.background {
-    background-image: url("../Content/img/sunset.png");
-    background-position: center bottom;
-    background-size: cover;
-    width: 100%;
-    padding-top: 50px;
-    min-height: 800px;
-    margin: 0 auto;
-}
-
 .background2 {
     background-image: url("../Content/img/daytimeBackground.png");
     background-position: center bottom;
@@ -159,24 +149,6 @@ h1 {
     z-index: 0;
 }
 
-.scroll-bar-horz {
-    position: absolute;
-    border: none;
-    width: 100%;
-    height: 700px;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    margin: 10px;
-    margin-top: 40px;
-    margin-bottom: 20px;
-}
-
-
-.student-header {
-    padding-top: 0px;
-    font-size: 5.9vw;
-    z-index:0;
-}
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
@@ -437,10 +409,39 @@ a.navbar-brand {
     color:#fff;
 }
 
-#studentnavicons {
+.background {
+    background-image: url("../Content/img/sunset.png");
+    background-position: center bottom;
+    background-size: cover;
+    width: 100%;
+    padding-top: 50px;
+    min-height: 800px;
+    margin: 0 auto;
+}
+
+.scroll-bar-horz {
+    position: absolute;
+    border: none;
+    width: 100%;
+    height: 700px;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    margin: 10px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+
+.student_header {
+    padding-top: 0px;
+    font-size: 5.9vw;
+    z-index: 0;
+}
+
+    #studentnavicons {
     position: absolute;
     left: 50%;
-    top: 15%;
+    top: 10%;
     font-size: calc(1.0vw + 1.0vh);
     transform: translate(-50%);
 }
