changed site css and shared layout

--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -200,7 +200,7 @@ textarea {
 }
 
 .nav > li > a {
-    padding-top: 50px;
+    padding-top: 30px;
     padding-bottom: 30px;
 }
 
@@ -209,7 +209,7 @@ a.navbar-brand {
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    margin-top: 30px;
+    margin-top: 10px;
     display: block;
     width: 50px;
     height: 50px;
@@ -432,13 +432,12 @@ a.navbar-brand {
 }
 
 
-.student_header {
+.student-header {
     padding-top: 0px;
     font-size: 5.9vw;
-    z-index: 0;
 }
 
-    #studentnavicons {
+#studentnavicons {
     position: absolute;
     left: 50%;
     top: 10%;
