--- a/5051/Views/Shared/_Layout.cshtml
+++ b/5051/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     <header class="nav-wrapper">
         <nav class="navbar-custom">
 
-                    <div class="col-md-10 col-md-offset-2">
+                    <div class="col-md-10 col-md-offset-2 col-xs-12">
                         <div class="navbar-header col-md-2">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="icon-bar"></span>
@@ -28,7 +28,7 @@
                                 <span class="icon-bar"></span>
                             </button>
                         </div>
-                        <div class="navbar-collapse collapse col-md-10 col-md-offset-5">
+                        <div class="navbar-collapse collapse col-md-10 col-md-offset-5 col-xs-12">
                             <ul class="nav navbar-nav">
                                 <li>@Html.ActionLink("Student", "Login", "Portal")</li>
                                 <li>@Html.ActionLink("Admin", "AdminLogin", "Portal")</li>
