--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -15,6 +15,7 @@
 }
 
 /******************ADMIN SECTION*****************************************************/
+/*background for all pucs*/
 #background3 {
     background-image: url("../Content/img/nightimeBackground.png");
     background-position: center bottom;
