--- a/5051/Views/Admin/Calendar.cshtml
+++ b/5051/Views/Admin/Calendar.cshtml
@@ -5,6 +5,7 @@
 
 <link rel="stylesheet" type="text/css" href="~/Content/Login.css" />
 
+<!--Function to change calendar page-->
 <script>
     function overrideCalendar() {
         if (confirm("Confirm to override")) {
