--- a/5051/Views/Admin/Calendar.cshtml
+++ b/5051/Views/Admin/Calendar.cshtml
@@ -20,7 +20,7 @@
     }
 </script>
 
-<div class="background3">
+<div id="background3">
     <div class="row text-center">
         <div class="container">
             <div style="float:right;" align="center">
