--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -144,7 +144,7 @@ body {
 }
 
 h1 {
-    font-family: Catamaran;
+    font-family: 'Ubuntu', sans-serif;
     font-size: 60px;
     font-weight: 800;
     z-index: 0;
