--- a/5051/Views/Shared/_Layout.cshtml
+++ b/5051/Views/Shared/_Layout.cshtml
@@ -12,15 +12,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-    <link rel="icon" href="~/Content/img/avatar8.png">
-
+    <link rel="icon" href="/Content/img/sitelogo.png">
 </head>
 <body>
 
     <header class="nav-wrapper">
         <nav class="navbar-custom">
 
-                    <div class="col-md-10 col-md-offset-2 col-xs-12">
+                    <div class="col-md-12 col-md-offset-2 col-xs-12">
                         <div class="navbar-header col-md-2">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="icon-bar"></span>
